# PicoGameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: FindGLFW.cmake  FindTinyXML2.cmake
examples/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt  HelloGame.cpp  HelloGame.hpp  main.cpp
extlibs/TinyXML2/lib/x64/: tinyxml2.lib
extlibs/TinyXML2/lib/x86/: tinyxml2.lib
extlibs/glad/include/glad/: glad.h
extlibs/glad/src/: glad.c
include/PicoGameEngine/: PicoGameEngine.hpp
include/PicoGameEngine/Core/: Application.hpp  Config.hpp  Game.hpp  ScreenManager.hpp  Window.hpp
include/PicoGameEngine/Graphics/: Button.hpp  Gui.hpp  Text.hpp  UiContainer.hpp  UiElement.hpp
include/PicoGameEngine/Utils/: Utils.hpp  Vector2.hpp
src/: CMakeLists.txt
src/Core/: Application.cpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/Graphics/: Button.cpp  Gui.cpp  Text.cpp  UiContainer.cpp
src/Utils/: Utils.cpp
